--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -104,6 +104,13 @@ button {
   -webkit-user-select: none;
   width: auto;
 
+  &:hover {
+    box-shadow:
+      #222 0 0 0 1px,
+      rgba(255, 255, 255, 0.8) 0 0 0 2px;
+    transition: box-shadow 0.2s;
+  }
+
   &:focus-visible {
     box-shadow:
       #222 0 0 0 2px,
@@ -132,6 +139,13 @@ input[type="time"] {
   border-radius: 8px;
   box-sizing: border;
   padding: 2px 4px;
+
+  &:hover {
+    box-shadow:
+      #222 0 0 0 1px,
+      rgba(255, 255, 255, 0.8) 0 0 0 2px;
+    transition: box-shadow 0.2s;
+  }
 }
 
 label {
