--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,6 +11,11 @@ header {
   padding: 15px;
   text-align: center;
 
+  .header-left {
+    float: left;
+    display: flex;
+  }
+
   h1 {
     display: inline-block;
     margin: 0;
