--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,79 @@ body {
     "Helvetica Neue",
     sans-serif;
 }
+
+button {
+  background-color: #fff;
+  border: 1px solid #222;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: #222;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  margin: 0;
+  outline: none;
+  padding: 6px 12px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  touch-action: manipulation;
+  transition:
+    box-shadow 0.2s,
+    -ms-transform 0.1s,
+    -webkit-transform 0.1s,
+    transform 0.1s;
+  user-select: none;
+  -webkit-user-select: none;
+  width: auto;
+
+  &:hover {
+    box-shadow:
+      #222 0 0 0 1px,
+      rgba(255, 255, 255, 0.8) 0 0 0 2px;
+    transition: box-shadow 0.2s;
+  }
+
+  &:focus-visible {
+    box-shadow:
+      #222 0 0 0 2px,
+      rgba(255, 255, 255, 0.8) 0 0 0 4px;
+    transition: box-shadow 0.2s;
+  }
+
+  &:active {
+    background-color: #f7f7f7;
+    border-color: #000000;
+    transform: scale(0.96);
+  }
+
+  &:disabled {
+    border-color: #dddddd;
+    color: #dddddd;
+    cursor: not-allowed;
+    opacity: 1;
+  }
+}
+
+input {
+  appearance: none;
+  background-color: #fff;
+  border: 1px solid #222;
+  border-radius: 8px;
+  box-sizing: border;
+  padding: 2px 4px;
+
+  &:hover {
+    box-shadow:
+      #222 0 0 0 1px,
+      rgba(255, 255, 255, 0.8) 0 0 0 2px;
+    transition: box-shadow 0.2s;
+  }
+}
+
+label {
+  min-width: 50px;
+  display: inline-block;
+}
