--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header
-  [weekHours]="settings()!.weekHours"
+  [settings]="settings()"
   [total]="total()"
   (weekYear)="weekYearChange($event)"
 ></app-header>
