--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header
   [settings]="settings()"
-  [total]="total()"
+  [days]="days()"
   (weekYear)="weekYearChange($event)"
 ></app-header>
 <main>
