--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,8 @@ body {
     sans-serif;
 }
 
-button {
+button,
+.btn {
   background-color: #fff;
   border: 1px solid #222;
   border-radius: 8px;
