--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,5 @@
-<p>login works!</p>
+<div class="login-buttons">
+  <button (click)="loginWithGoogle()">Login with Google</button>
+  <button (click)="loginWithMicrosoft()" disabled>Login with Microsoft</button>
+  <button (click)="loginWithApple()" disabled>Login with Apple</button>
+</div>
