--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,6 +1,6 @@
 <dialog #settingsDialog>
   <h2>Settings</h2>
-  @if (settings()) {
+  @if (settingsEdit()) {
     <form (submit)="save()">
       <div>
         <label for="weekHours">Week hours</label>
@@ -8,7 +8,27 @@
           id="weekHours"
           type="number"
           name="weekHours"
-          [(ngModel)]="settings().weekHours"
+          [(ngModel)]="settingsEdit().weekHours"
+          required
+        />
+      </div>
+      <div>
+        <label for="minTime">Min time</label>
+        <input
+          id="minTime"
+          type="time"
+          name="minTime"
+          [(ngModel)]="settingsEdit().minTime"
+          required
+        />
+      </div>
+      <div>
+        <label for="maxTime">Max time</label>
+        <input
+          id="maxTime"
+          type="time"
+          name="maxTime"
+          [(ngModel)]="settingsEdit().maxTime"
           required
         />
       </div>
