--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 <header>
   <div class="header-left">
     @if (user$ | async) {
-      <button id="menu-toggle" popovertarget="menu-popover">Menu</button>
-      <div id="menu-popover" popover anchor="menu-toggle">
+      <button popovertarget="menu-popover">Menu</button>
+      <div id="menu-popover" popover>
         <div>
           <button (click)="logout()">Logout</button>
           <a class="btn" [routerLink]="['./settings']">Settings</a>
