--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,9 +1,68 @@
-<app-header [days]="days()" (weekYear)="weekYearChange($event)"></app-header>
+<app-header [days]="days()" (weekYear)="weekYearChange($event)" />
 <main>
   @for (day of days(); track $index; let dayIndex = $index) {
     <section>
-      <h2>{{ day.date | date: "EEE dd/MM" }}</h2>
+      <h2>
+        {{ day.date | date: "EEE dd/MM" }}
+        <button
+          type="button"
+          [attr.popovertarget]="'absence-popover' + dayIndex"
+          title="Ajouter une absence"
+          class="btn-absence"
+          [style.anchorName]="'--absence' + dayIndex"
+          [class.active]="day.absence"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M6.146 7.146a.5.5 0 0 1 .708 0L8 8.293l1.146-1.147a.5.5 0 1 1 .708.708L8.707 9l1.147 1.146a.5.5 0 0 1-.708.708L8 9.707l-1.146 1.147a.5.5 0 0 1-.708-.708L7.293 9 6.146 7.854a.5.5 0 0 1 0-.708"
+            />
+            <path
+              d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"
+            />
+          </svg>
+        </button>
+        <div
+          [attr.id]="'absence-popover' + dayIndex"
+          class="absence-popover popover"
+          popover
+          [style.positionAnchor]="'--absence' + dayIndex"
+        >
+          <div>
+            <button
+              (click)="markAbsence(dayIndex, undefined)"
+              [class.active]="!day.absence"
+            >
+              Présent
+            </button>
+            <button
+              (click)="markAbsence(dayIndex, 'day')"
+              [class.active]="day.absence === 'day'"
+            >
+              Absent la journée
+            </button>
+            <button
+              (click)="markAbsence(dayIndex, 'morning')"
+              [class.active]="day.absence === 'morning'"
+            >
+              Absent le matin
+            </button>
+            <button
+              (click)="markAbsence(dayIndex, 'afternoon')"
+              [class.active]="day.absence === 'afternoon'"
+            >
+              Absent l'après-midi
+            </button>
+          </div>
+        </div>
+      </h2>
       <h3>{{ totalByDay()[dayIndex] | time }}</h3>
+
       <div>
         @for (period of day.periods; track $index; let periodIndex = $index) {
           @if ($index > 0) {
@@ -47,9 +106,21 @@
           </button>
         }
         <hr />
-        <button (click)="add(dayIndex)" class="btn-success">
-          Ajouter une période
-        </button>
+        @if (day.absence === "day") {
+          Absent la journée
+        } @else if (day.absence === "morning") {
+          Absent le matin
+          <hr />
+        } @else if (day.absence === "afternoon") {
+          Absent l'après-midi
+          <hr />
+        }
+
+        @if (day.absence !== "day") {
+          <button (click)="add(dayIndex)" class="btn-success">
+            Ajouter une période
+          </button>
+        }
       </div>
     </section>
   }
