--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,12 @@ button,
   -webkit-user-select: none;
   width: auto;
 
+  &.active {
+    box-shadow:
+      #222 0 0 0 1px,
+      rgba(255, 255, 255, 0.8) 0 0 0 2px;
+  }
+
   &:hover {
     box-shadow:
       #222 0 0 0 1px,
@@ -118,4 +124,21 @@ input {
 label {
   min-width: 50px;
   display: inline-block;
+}
+
+.popover {
+  background: #9999;
+  border: none;
+  margin: 0;
+  position: absolute;
+  top: anchor(bottom);
+  left: anchor(left);
+  border-radius: 10px;
+
+  > div {
+    display: flex;
+    flex-direction: column;
+    z-index: 1;
+    gap: 5px;
+  }
 }
