refactor: update tooltip component to enhance class handling and add role attribute

--- a/src/app/tooltip/tooltip.component.html
+++ b/src/app/tooltip/tooltip.component.html
@@ -1,1 +1,3 @@
-<div popover="hint" #popover class="{{ tooltipClass() }}"><ng-content /></div>
+<div popover="hint" #popover class="{{ class() }}" role="tooltip">
+  <ng-content />
+</div>
