fix: correct font-weight property in tooltip component CSS

--- a/src/app/tooltip/tooltip.component.css
+++ b/src/app/tooltip/tooltip.component.css
@@ -12,6 +12,7 @@
   color: #fff;
   border: none;
   font-size: 1rem;
+  font-weight: normal;
   transition: opacity 0.3s ease-in-out;
   opacity: 0;
 }
