--- a/src/app/settings/settings.component.css
+++ b/src/app/settings/settings.component.css
@@ -1,5 +1,42 @@
 :host {
-  dialog::backdrop {
-    background-color: rgba(0, 0, 0, 0.5);
+  dialog {
+    transition:
+      opacity 0.5s ease-in-out,
+      transform 0.5s ease-in-out,
+      overlay 0.5s ease-in-out allow-discrete,
+      display 0.5s ease-in-out allow-discrete;
+
+    opacity: 0;
+    transform: translateY(1em);
+  }
+
+  dialog {
+    &::backdrop {
+      transition:
+        display 0.5s allow-discrete,
+        overlay 0.5s allow-discrete,
+        background-color 0.5s;
+      background-color: rgba(0, 0, 0, 0);
+    }
+
+    &[open]::backdrop {
+      background-color: rgba(0, 0, 0, 0.5);
+    }
+  }
+
+  dialog[open] {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  @starting-style {
+    dialog[open] {
+      opacity: 0;
+      transform: translateY(-1em);
+    }
+
+    dialog[open]::backdrop {
+      background-color: rgba(0, 0, 0, 0);
+    }
   }
 }
