feat: implement visibility handling for tooltip component using signals

--- a/src/app/tooltip/tooltip.component.html
+++ b/src/app/tooltip/tooltip.component.html
@@ -1,3 +1,5 @@
 <div popover="hint" #popover class="{{ class() }}" role="tooltip">
-  <ng-content />
+  @defer (when isVisible()) {
+    <ng-content />
+  }
 </div>
