--- a/src/styles.css
+++ b/src/styles.css
@@ -143,3 +143,12 @@ label {
     gap: 5px;
   }
 }
+
+dialog {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  & > div {
+    padding: 1em;
+  }
+}
