feat: replace dialog element with app-dialog component and update close handling

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -37,10 +37,15 @@
     }
   </div>
   <div class="header-right">
+    <app-tooltip [target]="githubBtn" [position]="'left'"
+      >Open in Github</app-tooltip
+    >
+
     <a
       class="link"
       href="https://github.com/bastienmoulia/worx-time"
       target="_blank"
+      #githubBtn
     >
       <svg
         xmlns="http://www.w3.org/2000/svg"
