--- a/src/main/main.css
+++ b/src/main/main.css
@@ -52,3 +52,15 @@ main {
 .absence-popover {
   position-anchor: --absence;
 }
+
+.offline-banner {
+  background-color: #f8d7da;
+  color: #721c24;
+  padding: 1em;
+  border: 1px solid #f5c6cb;
+  border-radius: 0.25rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
