--- a/src/header/header.css
+++ b/src/header/header.css
@@ -13,8 +13,16 @@ header {
   .header-center {
     flex: 1;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    justify-content: center;
+    gap: 1em;
+
+    div {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   h1 {
